<resources>
    <string name="app_name">FireFlies</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="new_user">新用户</string>
    <string name="logging">正在登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="action_register">注册</string>
    <string name="on_register">正在注册</string>
    <string name="register_success">注册成功</string>
    <string name="permission_denied">权限已拒绝</string>
    <string name="on_check">正在检验</string>
    <string name="register_failed">注册失败</string>
    <string name="bottom_bar_home">首页</string>
    <string name="bottom_bar_found">发现</string>
    <string name="bottom_bar_message">消息</string>
    <string name="bottom_bar_me">我</string>
    <string name="user_msg">微博</string>
    <string name="user_follow">关注</string>
    <string name="user_fans">粉丝</string>
    <string name="load_fail">加载失败</string>
    <string name="default_count">0</string>
    <string name="btn_logout">退出登录</string>
    <string name="search_user">发现用户</string>
    <string name="login_type">登录方式</string>
    <string name="choose_icon">选择头像</string>
    <string name="register_type">注册方式</string>
    <string name="header_setting">设置</string>
    <string name="username">UserName</string>
    <string name="fans">粉丝</string>
    <string name="follows">关注</string>
    <string name="edit">编辑微博</string>
    <string name="push">发布</string>
    <string name="share_news">分享新鲜事...</string>
</resources>
