<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/icon_avatar" />







    <EditText
        android:id="@+id/loginAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/prompt_username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black" />

    <Spinner
        android:background="@null"
        android:layout_margin="10dp"
        android:spinnerMode="dialog"
        android:layout_gravity="center_horizontal"
        android:id="@+id/loginType"
        android:entries="@array/loginType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/login_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <FrameLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    </FrameLayout>

        <TextView
            android:textColor="@color/ff_color_blue"
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/new_user" />




</LinearLayout>