<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info_item"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="75dp">

    <ImageView
        android:id="@+id/user_icon"
        android:src="@mipmap/icon_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"/>

    <TextView
        android:id="@+id/username"
        android:text="@string/username"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/brief"
        android:layout_below="@+id/username"
        android:layout_toEndOf="@+id/user_icon"
        android:text="一句简介"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/fans"
        android:layout_below="@+id/brief"
        android:layout_toEndOf="@+id/user_icon"
        android:text="@string/fans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="0"
        android:layout_alignBottom="@+id/fans"
        android:layout_toEndOf="@+id/fans"
        android:id="@+id/fansCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/follows"
        android:id="@+id/follow"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>