<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simple_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:background="@color/divider_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="5dp"
            android:src="@mipmap/icon_avatar" />

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/user_icon"
            android:paddingTop="5dp"
            android:text="@string/load_fail"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:text="@string/load_fail"
            android:id="@+id/brief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userId"
            android:layout_toEndOf="@+id/user_icon"
            android:paddingTop="5dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/simple_info_ll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/msgCount"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="@string/default_count"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="@string/user_msg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/simple_info_ll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followCount"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="@string/default_count"

                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="@string/user_follow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/simple_info_ll"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fansCount"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="@string/default_count"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_horizontal"
                android:text="@string/user_fans" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>